Меняет текст на главной странице

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <body>
     <header class="page-header">
       <div class="container">
-        <p>+79995893233</p>
-        <p>denisgolovin93@mail.ru</p>
+        <p>+7999.......</p>
+        <p>denis.......@mail.ru</p>
       </div>
     </header>
 
     <section class="hero-image">
       <div class="container">
         <h1 class="heading">Головин Денис</h1>
-        <p>Middle Frontend Developer</p>
+        <p>Junior Frontend Developer</p>
       </div>
     </section>
 
@@ -28,7 +28,7 @@
         <h3>Пара слов о себе</h3>
         <p>Владею технологиями HTML, CSS, JavaScript, React, Angular, PHP, GIT.</p>
         <h3>Чем могу быть полезен</h3>
-        <p>Проектирование и создание сайтов любой сложности.</p>
+        <p>Проектирование и создание сайтов.</p>
       </div>
     </section>
 
@@ -46,7 +46,7 @@
 
     <footer class="page-footer">
       <div class="container">
-        denisgolovin93@mail.ru
+        denis........@mail.ru
       </div>
     </footer>
   </body>
